<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10sp"
    tools:context=".ContractInformationActivity"
    android:orientation="vertical"
    android:layout_marginBottom="20sp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:layout_weight="7"
        android:padding="10dp"
        android:paddingTop="10sp"
        android:text="@string/new_contract_title"
        android:textAlignment="center"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/siteAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:ems="10"
        android:hint="@string/site_address"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="87dp" />

    <EditText
        android:id="@+id/siteBoardFeet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:ems="10"
        android:hint="@string/bdft"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="87dp" />

    <EditText
        android:id="@+id/siteRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:ems="10"
        android:hint="@string/rate"
        android:inputType="numberDecimal"
        android:layout_marginBottom="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="87dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >


        <Button
            android:id="@+id/buttonBack"
            android:onClick="backToUserActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Back" />

        <Button
            android:id="@+id/contractButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/setup_contract"
            android:onClick="saveContract" />

    </LinearLayout>

</LinearLayout>