<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp"
        android:layout_weight="0.7"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="50sp"
        android:text="@string/welcome_title"
        android:padding="10dp"
        />

    <EditText
        android:id="@+id/login_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="#FFFFFF"
        android:inputType="textEmailAddress"
        android:layout_weight="0.1"
        android:hint="Username"
        />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_weight="0.1"
        android:hint="Password"/>

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button"
        android:layout_weight="0.05"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="register"/>

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:layout_weight="0.05"
        android:layout_marginBottom="10dp"
        android:onClick="login"/>

</LinearLayout>